--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Bus Tome Tracker</string>
+    <string name="app_name">Bus Time Tracker</string>
     <string name="delete">Удалить</string>
 </resources>
